--- a/last-version/css/style.css
+++ b/last-version/css/style.css
@@ -457,7 +457,6 @@ label.error {
     left: 0;
     width: 100%;
     top: 0;
-    height: 100%;
 }
 
 /*.preloader {
@@ -484,6 +483,12 @@ label.error {
     background: #fff;
     color: #4b4b4b;
     text-align: center;
+}
+
+@media screen and (max-width: 500px) {
+    #preloader {
+        padding-top: 30vh;
+    }
 }
 
 #preloader > img {
@@ -2045,6 +2050,7 @@ a.brand:focus {
 }
 
 .title-normal {
+    padding-top: 3rem;
     letter-spacing: -0.025em;
     line-height: 1.33333;
     margin: 0 0 5rem;
@@ -3937,9 +3943,8 @@ div .padding-bottom-0px {
     /* min-height: 80px; */
     color: #339933;
     padding: 4px;
-    margin-top: 16px;
-        margin-top: 16px;
-    margin-bottom: 12px;
+    margin-top: 20px;
+    margin-bottom: 20px;
     font-size: 15px;
     /* width: 212px; */
     text-align: center;
@@ -3947,14 +3952,19 @@ div .padding-bottom-0px {
     font-weight: 600;
     line-height: 20px;
 }
-.button {
-    /* min-height: 80px; */
-    color: #fff;
-    padding: 20px;
-    font-size: 13px;
-    margin-top:  10px;
 }
+
+@media screen and (max-width: 430px) {   
+    .button {
+        /* min-height: 80px; */
+        color: #fff;
+        font-size: 18px;
+        line-height: 1.1em;
+        padding: 5px;
+        margin-top: 20px;
+    }
 }
+
 @media (min-width:415px) {
 .consult {
     /* min-height: 80px; */
@@ -4020,10 +4030,32 @@ div .padding-bottom-0px {
 #knopka{
 	background: #fff;
 }
-.bg2:hover {
+
+.button {
+    max-width: 330px;
+    font-weight: 500;
+}
+
+@media screen and (min-width: 430px) and (max-width: 990px) {
+    .button {
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
+
+@media screen and (min-width: 414px) and (max-width: 769px) {
+    .otstup {
+        text-align: center;
+        padding-bottom: 10px;
+    }
+}
+
+.bg2:hover,
+.button:hover {
     background: #222;
     cursor: pointer;
 }
+
 .hed{
     font-weight: 600;
     font-size: 24px;
@@ -4051,7 +4083,7 @@ div .padding-bottom-0px {
     line-height: 20px;
     font-weight: 500;
     color: #000;
-    max-height: 200px;
+    max-height: 250px;
     min-height: 200px;
     }
 }
@@ -4246,6 +4278,7 @@ div .slbArrow {
    padding: 10px;
 }
 }
+
 .Shape1{
     display: none;
 }
@@ -4426,6 +4459,32 @@ color: #fff;
     z-index: 36;
 }
 }
+
+@media screen and (max-width: 480px) {
+    .container {
+        width: 90%;
+    }
+}
+
+@media screen and (max-width: 530px) {
+    .imgslogan {
+        left: 15px;
+    }
+}
+
+@media screen and (min-width: 450px) and (max-width: 480px) {
+    .futures .container {
+        width: 80% !important;
+        margin-left: 0;
+    }
+}
+
+@media screen and (max-width: 415px) {
+    .imgslogan {
+        left: 45px;
+    }
+}
+
 @media screen and (min-width:414px) and (max-width: 1024px){
 .infoblock2 {
     background: #fff;
@@ -4463,6 +4522,17 @@ color: #fff;
 }
 }
 */
+@media screen and (max-width: 800px) {
+    .infoblock2,
+    .infoblock3 {
+        width: 96%;
+    }
+
+    .Shape2 {
+        display: none;
+    }
+}
+
 @media (max-width: 414px){
 .infoblock3{
     background: #fff;
@@ -4472,10 +4542,16 @@ color: #fff;
 @media (min-width: 415px){
 .infoblock3{
     background: #fff;
-    left: 15px;
     padding: 31px;
 }
 }
+
+@media screen and (min-width: 415px) and (max-width: 800px) {
+    .infoblock3 {
+        left: 15px;
+    }
+}
+
 #sectionstep{
     /*margin-top: 45px;*/
 }
@@ -4485,11 +4561,18 @@ color: #fff;
     line-height: 20px;
     text-align: center;
     color: #000;
-    padding: 20px;
+    padding: 40px 20px 20px;
     text-align: center;
     font-weight: 600;
     margin-bottom: 20px;
 }
+
+@media screen and (min-width: 800px) {
+    .nextstep {
+        font-size: 18px;
+    }
+}
+
 @media (min-width:415px) {
 #sectionicon li {
 background: url(../images/icons/Icon5.png) no-repeat 0px 20px;
@@ -4713,7 +4796,7 @@ background: none;
 
     .description,
     .col_cen {
-        width: 458px;
+        width: 80vw;
     }
 
     .col_cen {
@@ -4731,6 +4814,153 @@ background: none;
  img.logos {
     width: 100%;
  }
+
+ @media screen and (min-width: 550px) and (max-width: 990px) {
+    img.logos {
+        width: 110px;
+    }
+
+    .upper:first-child {
+        margin-left: 10%;
+    }
+ }
+
+ @media screen and (min-width: 990px) {
+    img.logos {
+        width: 130px;
+    }
+ }
+
+@media screen and (max-width: 790px) and (min-width: 600px) {
+    .pl_centered {
+        padding-left: 20%;
+        width: 60%;
+    }
+}
+
+.aboutus > .img-responsive {
+    display: block;
+    min-width: 100%;
+    height: auto;
+}
+
+@media screen and (min-width: 900px) {
+    .logos-min-1 {
+        padding-left: 40px;
+        padding-top: 10px;
+    }
+
+    .logos-min-2 {
+        padding-left: 20px;
+        padding-right: 10px;
+        padding-top: 10px;
+    }
+}
+
+@media screen and (max-width: 414px) {
+    .top_line {
+        border-top: 1px solid #cacaca;
+    }
+}
+
+@media screen and (min-width: 530px) and (max-width: 1090px) {
+    .description {
+        width: 458px;
+    }
+}
+
+@media screen and (min-width: 990px) and (max-width: 1200px) {
+    .upper {
+        margin-top: 30px;
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    .upper {
+        margin-top: -10px;
+    }
+}
+
+@media screen and (max-width: 990px) {
+    .upper {
+        margin-bottom: 30px;
+    }
+}
+
+@media screen and (max-width: 414px) {
+    .infoblock3 {
+        width: 100%;
+    }
+}
+
+@media screen and (max-width: 990px) {
+
+}
+
+#top-line .mob-show {
+    display: none;
+}
+
+#ring {
+    position: fixed;
+    display: none;
+    z-index: 200;
+    right: 30px;
+    bottom: 30px;
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    background: #888888;
+    color: white;
+    line-height: 65px;
+    font-size: 30px;
+    text-align: center;
+    opacity: 0.8;
+    transition: all 0.5s;
+}
+
+#ring:hover {
+    transform: scale(1.1);
+    opacity: 1;
+}
+
+@media screen and (max-width: 500px) {
+    #ring {
+        display: inline-block;
+    }
+}
+
+@media screen and (max-width: 530px) {
+    .textabout {
+        padding: 15px;
+    }
+}
+
+@media screen and (min-width: 990px) {
+    .descicon2 {
+        white-space: nowrap;
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    .section-about-title {
+        line-height: 30px;
+    }
+}
+
+@media screen and (max-width: 414px) {
+    .space_after {
+        padding-bottom: 0;
+    }
+}
+
+.low {
+    margin-bottom: 10px;
+}
+
+.hed {
+    padding-top: 30px;
+}
 
 /* @media (max-width:768px) {
  	.nextstep{
