--- a/Addition/css/style.css
+++ b/Addition/css/style.css
@@ -79,7 +79,7 @@ h1,
 h2,
 .h2 {
     font-weight: 600;
-    font-size: 2.571rem;
+    font-size: 28px;
     line-height: 1.166;
     color: #000;
     letter-spacing: 0;
@@ -447,7 +447,7 @@ label.error {
     height: 100%;
 }
 
-.preloader {
+/*.preloader {
     position: fixed;
     overflow: hidden;
     z-index: 100;
@@ -458,7 +458,7 @@ label.error {
     background: #fff;
     color: #4b4b4b;
     text-align: center;
-}
+}*/
 
 .spinner {
     position: absolute;
@@ -668,7 +668,7 @@ a.brand:focus {
 .navbar-toggle {
     display: block;
     margin: 0;
-    padding: 0;
+    padding: 8px 0 0;
     border-radius: 0;
 }
 
@@ -978,11 +978,7 @@ a.brand:focus {
 }
 
 .section {
-    padding: 6.28rem 0;
-}
-
-.section-news.section {
-    padding-bottom: 3.5rem;
+    padding: 2.28rem 0;
 }
 
 .section-title {
@@ -1019,7 +1015,8 @@ a.brand:focus {
 }
 #fullwidthslide{
     background: url(../images/slider/slider1.jpg);
-    height: 380px;
+    background-size: cover;
+    height: 420px;
     margin-top: 126px;
 }
 .rev_slider .link-arrow {
@@ -1227,7 +1224,7 @@ a.brand:focus {
 }
 
 .project-carousel {
-    margin-top: 5.92rem;
+    margin-top: 3rem;
 }
 
 .owl-nav {
@@ -1290,7 +1287,7 @@ a.brand:focus {
 
 .owl-dots {
     text-align: center;
-    margin-top: 5.857rem;
+    margin-top: 1.857rem;
 }
 
 .owl-dot {
@@ -2019,7 +2016,7 @@ a.brand:focus {
 .title-normal {
     letter-spacing: -0.025em;
     line-height: 1.33333;
-    margin: 0 0 5rem;
+    margin: 0 0 2.8rem;
     text-align: center;
 }
 
@@ -2282,7 +2279,19 @@ a.brand:focus {
 
 .row-contact-info {
     margin: -5rem -4% 0;
+    font-size: 13px;
+    font-family: 'Poppins', sans-serif;
 }
+
+.row-contact-info h3,
+.row-contact-info .text-dark {
+    font-size: 1rem;
+}
+
+.row-contact-info.contact-info h3 {
+    font-size: 1.2rem;
+}
+
 
 .success-message,
 .error-message {
@@ -2327,6 +2336,7 @@ a.brand:focus {
 .contact-info-row {
     line-height: 1.5;
     margin-bottom: 2.14rem;
+    color: #666666;
 }
 
 .contact-info-row:last-child {
@@ -3881,10 +3891,10 @@ div .padding-bottom-0px {
 .section_info {
     min-height: 80px;
     color: #000;
-    padding: 45px;
+    padding: 45px 0 0 30%;
     font-size: 18px;
-    font-weight: 600;
     line-height: 20px;
+    text-align: center;
 }
 
 .button {
@@ -3903,9 +3913,11 @@ div .padding-bottom-0px {
 }
 
 .infosbg{
-    background-image: url(../images/slider/infosbg.jpg);
-    height: 150px;
+    background: url(../images/slider/infosbg.jpg) no-repeat center;
+    background-size: cover;
+    min-height: 150px;
     margin-top: 30px;
+    margin-bottom: 30px;
 }
 .bg {
     background: #cd2028;
@@ -3920,10 +3932,10 @@ div .padding-bottom-0px {
 }
 .bg2 {
     margin-top: 54px;
-    background: #cd2028;
+    background: linear-gradient(to top, #cf222b, #fe6a71);
     padding: 12px;
     line-height: 25px;
-    height: 75px;
+    min-height: 75px;
     text-transform: uppercase;
     text-align: center;
 }
@@ -3946,13 +3958,19 @@ div .padding-bottom-0px {
 .imgbaner {
     margin-bottom: 30px;
 }
-.imgbaner:hover {
-    opacity: 0.5;
-}
-.designprocess {}
 
-
+#weare .img-responsive {
+    margin-left: auto;
+    margin-right: auto;
 }
+
+@media screen and (min-width: 420px) and (max-width: 620px) {
+    .designprocess li {
+        width: 20% !important;
+        margin: 0 2%;
+    }
+ }
+
 @media (max-width:1200px) {
     .col-2-contact {
         margin-top: 0px;
@@ -4122,7 +4140,8 @@ div .slbArrow {
 .center{
 	text-align: center;
 }
-.textabout{
+.textabout,
+.textabout3 {
 	/*line-height: 20px;
     margin-top: 40px;
     font-weight: 500;
@@ -4224,8 +4243,8 @@ color: #fff;
     padding: 50px;
 }
 .infoblock3{
+    position: relative;
 	background: #fff;
-    left: 15px;
     padding: 31px;
 }
 #sectionstep{
@@ -4368,5 +4387,457 @@ background: none;
     #instafeed a img {
         width: 100%;
     }
+}
+
+/*corections*/
+
+.h2-upper {
+    margin-top: 0.3rem;
+}
+
+.iconh{
+    max-height: 80px;
+}
+
+ @media screen and (max-width: 620px) {
+    #sectionicon li {
+        background: none;
+    }
+ }
+
+ @media screen and (max-width: 430px) {
+    #sectionicon li {
+        float: none;
+        width: 100%;
+    }
+ }
+
+ #experience {
+    padding-top: 1px;
+ }
+
+ @media screen and (max-width: 1200px) {
+    #services .imgslogan {
+        width: 283px;
+        top: 31px;
+    }
+ }
+
+ @media screen and (max-width: 990px) {
+    #services .img-responsive {
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    #services .imgslogan {
+        width: 50%;
+        margin-left: 22%;
+    }
+ }
+
+ #services {
+    margin-top: 50px;
+ }
+
+.low {
+    margin-bottom: 10px;
+}
+
+@media screen and (max-width: 500px) {
+    .nextstep {
+        padding: 20px;
+        font-size: 18px;
+    }    
+
+    .infoblock3 {
+        padding-top: 1px;
+        padding-bottom: 1px;
+    }
+}
+
+img.logos {
+    width: 100%;
+}
+
+@media screen and (min-width: 900px) {
+    .logos-min-1 {
+        padding-left: 40px;
+        padding-top: 10px;
+    }
+}
+
+@media screen and (min-width: 900px) {
+    .logos-min-2 {
+        padding-left: 20px;
+        padding-right: 10px;
+        padding-top: 10px;
+    }
+}
+
+@media screen and (min-width: 990px) {
+    img.logos {
+        width: 130px;
+    }
+}
+
+@media screen and (max-width: 990px) {
+    .upper {
+        margin-bottom: 30px;
+    }
+}
+
+@media screen and (max-width: 990px) and (min-width: 550px) {
+    img.logos {
+        width: 110px;
+    }
+}
+
+@media (max-width: 414px) {
+    .logos {
+        /* float: none; */
+        /* margin: 0 auto; */
+        /* margin-top: 50px; */
+        max-width: 60px;
+        margin-bottom: 12px;
+    }
+}
+
+@media (min-width: 415px) {
+    .logos {
+        float: none;
+        margin: 0 auto;
+        margin-top: 50px;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .section_info {
+        padding: 15px 15px 0;
+    }
+
+    .section_info p {
+        margin-bottom: 0;
+    }
+}
+
+#preloader {
+    position: fixed;
+    overflow: hidden;
+    z-index: 200;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    padding-top: 25vh;
+    vertical-align: middle;
+    background: #fff;
+    color: #4b4b4b;
+    text-align: center;
+}
+
+@media screen and (max-width: 500px) {
+    #preloader {
+        padding-top: 25vh;
+    }
+}
+
+#preloader > img {
+ width: 275px;
+}
+
+#ring {
+    position: fixed;
+    display: none;
+    z-index: 190;
+    right: 30px;
+    bottom: 30px;
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    background: #888888;
+    color: white;
+    line-height: 65px;
+    font-size: 30px;
+    text-align: center;
+    opacity: 0.8;
+    transition: all 0.5s;
+}
+
+#ring:hover {
+    transform: scale(1.1);
+    opacity: 1;
+}
+
+@media screen and (max-width: 500px) {
+    #ring {
+        display: inline-block;
+    }
+}
+
+@media screen and (min-width: 992px) {
+    #experience .description2 {
+        white-space: nowrap;
+    }
+
+    #experience .first_cont {
+        padding-left: 50px;
+    }
+
+    #experience .second_cont {
+        padding-right: 50px;
+    }
+}
+
+/*new adds*/
+
+.button {
+    font-weight: 500;
+}
+.bg {
+    border: 1px solid #c7c2c2b5;
+     padding: 0px; 
+    box-shadow: 0px 0px 7px 2px #22222245;
+    cursor: pointer;
+     text-transform: uppercase; 
+    background: linear-gradient(to top, #cf222b, #fe6a71);
+    text-align: center;
+    border-radius: 3px;
+     line-height: 20px; 
+}
+
+.otstup {
+    text-align: left;
+    font-size: 18px;
+    font-weight: 600;
+    line-height: 20px;
+}
 
 
+
+
+.button {
+     min-height: 20px; 
+    color: #fff;
+     padding: 10px 30px; 
+    font-size: 20px;
+    margin: 10px auto;
+     line-height: 25px; 
+}
+
+@media screen and (min-width: 992px) {
+    .section-about-title {
+        text-align: left !important;
+    }
+
+    .otstup {
+        padding-left: 30px;
+    }
+
+    .button {
+        width: 103%;
+    }
+
+    .otstup {
+        margin-top: 23px;
+    }
+}
+
+@media screen and (max-width: 992px) {
+    .otstup div {
+        margin: 0 0 20px 10px;
+        text-align: center;
+    }
+
+    .button {
+        display: inline-block;
+        margin: 20px auto;
+        max-width: 300px;
+    }
+}
+
+@media screen and (max-width: 430px) {
+    #services .imgslogan {
+        width: 80%;
+        margin-left: 5%;
+    }
+}
+
+@media screen and (max-width: 370px) {
+    #services .imgslogan {
+        top: 10px;
+        width: 90%;
+        margin-left: 2%;
+    }   
+}
+
+@media screen and (min-width: 767px) and (max-width: 990px) {
+    .free_consult {
+        padding-top: 15px;
+    }
+}
+
+@media screen and (max-width: 1200px) {
+    #services .imgslogan.md_lower {
+        top: 50px;
+    }
+}
+
+@media screen and (max-width: 340px) {
+    #services .imgslogan.md_lower {
+        top: 20px;
+    }
+}
+
+@media screen and (min-width: 380px) and (max-width: 430px) {
+    #services .imgslogan.sm_lower {
+        width: 50%;
+        margin-left: 20%;
+    }
+}
+
+@media screen and (max-width: 370px) {
+    #services .imgslogan.sm_lower {
+        top: 40px;
+    }
+}
+
+@media screen and (max-width: 990px) {
+    .textabout,
+    .textabout3 {
+        text-align: center;
+    }
+}
+
+@media screen and (min-width: 990px) {
+    .textabout,
+    .textabout3 {
+        text-align: justify;
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    .textabout, {
+        padding-top: 40px;
+    }
+}
+
+@media screen and (min-width: 995px) {
+    .textabout3 {
+        margin-bottom: 10px;
+    }
+}
+
+.section-news.section {
+    background: white;
+}
+
+@media (min-width: 1200px) {
+    .contact-info-row {
+        width: 120%;
+    }
+}
+
+@media screen and (min-width: 1025px) {
+    .Shape3 {
+        right: -17px;
+        background-image: url(../images/shapes/shape2.png);
+        position: absolute;
+        top: 35%;
+        width: 18px;
+        height: 47px;
+        z-index: 36;
+    }
+}
+
+.navbar {
+    position: absolute;
+    z-index: 10;
+    left: 0;
+    top: 0; 
+    width: 100%;
+    padding-top: 3.5rem;
+    height: 9rem;
+    background-color: #fff;
+    margin: 0;
+    border-radius: 0;
+}
+
+.boxed {
+    padding-left: 1.7rem;
+    padding-right: 1.7rem;
+}
+
+
+@media screen and (min-width: 768px) {
+    .boxed {
+        padding-left: 3rem;
+        padding-right: 3rem;
+    }
+}
+
+@media screen and (min-width: 992px) {
+    .boxed {
+        padding-left: 4.2857rem;
+        padding-right: 4.2857rem;
+    }
+
+    .navbar {
+       top: 0px !important;
+    }
+}
+
+.textabout {
+    font-family: 'Poppins', sans-serif;
+    line-height: 20px; 
+    margin-top: 20px;
+    font-size: 12px;
+    padding: 28px;
+    font-weight: 500;
+    color: #000;
+    margin-bottom: 0;
+}
+
+@media screen and (min-width: 530px) {
+    .textabout {
+        margin-bottom: 30px;
+    }
+}
+
+@media screen and (max-width: 414px) {
+    .textabout {
+        line-height: 20px;
+        font-size: 14px;
+        font-weight: 500;
+        color: #000;
+        text-align: center;
+    }
+}
+
+@media screen and (max-width: 530px) {
+    .textabout {
+        padding: 15px;
+    }
+}
+
+@media screen and (max-width: 414px) {
+    .top_line {
+        border-top: 1px solid #cacaca;
+    }
+}
+
+.nextstep{
+    font-size: 14px;
+    line-height: 20px;
+    text-align: center;
+    color: #000;
+    padding: 40px 15px 20px;
+    text-align: center;
+    font-weight: 600;
+    margin-bottom: 20px;
+}
+
+@media screen and (min-width: 800px) {
+    .nextstep {
+        font-size: 18px;
+    }
+}
